--- a/bootcamp/index.html
+++ b/bootcamp/index.html
@@ -48,9 +48,9 @@
       </nav>
 
       <header class="container mt-5">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center ">
           <div class="col-md-6">
-            <h5 class="mt-5">
+            <h5 class="mt-3 mt-sm-1">
               Become a <span class="text-warning">Web Developer</span>
             </h5>
             <p class="fs-6">
@@ -61,7 +61,7 @@
             </p>
             <a href="#" class="btn btn-primary btn-lg">Start The Enrollment</a>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6">
             <img
               src="images/the_girl.png"
               alt="Illustration Placeholder"
@@ -73,9 +73,13 @@
     </div>
 
     <div class="bg-primary">
-      <div class="container p-3 ">
-        <div class="row text-light">
-          <div class="col-12 col-md-6 d-flex align-items-center justify-content-center justify-content-md-start  ">Sign Up For Our Newsletter</div>
+      <div class="container pt-4 pb-4">
+        <div class="row text-light fs-4">
+          <div
+            class="col-12 col-md-6 mb-3 mb-md-0 d-flex align-items-center justify-content-center justify-content-md-start"
+          >
+            Sign Up For Our Newsletter
+          </div>
           <div class="col-12 col-md-6 d-flex">
             <input
               class="form-control"
@@ -90,75 +94,81 @@
       </div>
     </div>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Virtual</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+    <div class="container pt-5">
+      <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+        <div class="col">
+          <div class="card bg-dark text-light">
+            <div class="card-body">
+              <i class="bi bi-laptop fs-2"></i>
+              <h5 class="card-title">Virtual</h5>
+              <p class="card-text fs-6">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                iste sunt, minus eum modi tenetur maiores facilis?
+              </p>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Hybrid</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+
+        <div class="col">
+          <div class="card">
+            <div class="card-body bg-secondary">
+              <i class="bi bi-person-square fs-2"></i>
+              <h5 class="card-title">Hybrid</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                iste sunt, minus eum modi tenetur maiores facilis?
+              </p>
+              <a href="#" class="btn btn-dark">Read More</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">In Person</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">In Person</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">In Person</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">In Person</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolorem!
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+
+        <div class="col">
+          <div class="card bg-dark text-light">
+            <div class="card-body">
+              <i class="bi bi-people-fill fs-2"></i>
+              <h5 class="card-title">In Person</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                iste sunt, minus eum modi tenetur maiores facilis?
+              </p>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
+    <footer class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/js.png"
+            alt="Illustration Placeholder"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <h5 class="mt-5">Learn The Fundamentals</h5>
+          <p class="small fw-lighter">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur in
+            labore molestiae temporibus magni laudantium, minus, voluptatem odio
+            illum non nam ullam iure fugit eaque fuga at.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+            soluta necessitatibus rerum ab autem velit asperiores, dolores sunt
+            quae exercitationem cum consectetur, quis sequi tempore? Nobis
+            perferendis deserunt consectetur reprehenderit. Architecto tempore
+            rerum accusamus alias libero ullam magnam commodi esse repellendus
+            reprehenderit quia, accusantium sint vitae incidunt est minus
+            corporis.
+          </p>
+          <a href="#" class="btn bg-light">&gt; Read More</a>
+        </div>
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
