--- a/bootcamp-landing/landing.html
+++ b/bootcamp-landing/landing.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
 
-    <title>Document</title>
+    <title>Frontend bootcamp</title>
   </head>
   <body>
     <div class="bg-dark text-light">
